# Word-Search-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
data/: portugal.txt
include/: board.hpp  colors.hpp  game.hpp  lab.hpp  player.hpp  point.hpp  word.hpp
src/: Beginner.h  Board.cpp  Board.h  Easy_Board.cpp  Easy_Board.h  Expert.h  Game.cpp  Game.h  Hard_Board.cpp  Hard_Board.h  Letter.cpp  Letter.h  Player.h  Point.h  Word.cpp  Word.h  board.cpp  board.h  console.cpp  distritos.txt  functions.cpp  functions.h  game.cpp  lab.cpp  main.cpp  player.cpp  player.h  point.h  save.txt  ui.cpp  usa.txt  word.cpp  word.h  word_search.cpp  word_search.h
src/include/: board.hpp  console.hpp  game.hpp  player.hpp  point.hpp  rnd.hpp  ui.hpp  word.hpp
src/lib/: colors.h  json.hpp  lab.cpp  lab.h
src/words/: usa.txt
